prometheus/app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
spec:
  rules:
    - host: vcs-demo-cluster-2ca804a0-8a4e-11e8-80fc-0a365bcc232c.bfd7a751-b2f5-43a3-b2b3-0c82d6896aee.vke-user.com
      http:
        paths:
        - backend:
            serviceName: web-server
            servicePort: 8000
          path: /
        - backend:
            serviceName: api-fitcycle
            servicePort: 5000
          path: /api/v1.0/signups
